# PrintQ

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
app/api/: router.py
app/api/routes/: files.py  otp.py  shops.py  users.py  vendors.py  workorders.py
app/core/: c2b.py  config.py  dtypes.py  pages.py  phone.py  security.py  storage.py  templating.py  utils.py
app/db/: base.py  init_db.py  models.py  session.py
app/models/: user.py
app/repositories/: shops.py  users.py  vendors.py  workorders.py
app/schemas/: shop.py  user.py  vendor.py  workorder.py
app/services/: shops.py  users.py  vendors.py  workorders.py
app/static/css/: app.css
app/static/javascript/: started.js
app/templates/: base.html  dashboard.html  index.html  order.html  queue.html  settings.html  shop-create.html  started.html  vendor-login.html  vendor-signup.html  vendor.html
app/web/: router.py
app/web/routes/: home.py  queues.py  started.py  usage.py
tests/: test_health.py
